<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">League of Legends Game Quiz</string>
    <string name="action_settings">Settings</string>

    <string name="hero_quiz">Hero quiz</string>
    <string name="skill_quiz">Skill quiz</string>

    <string name="points">Points: </string>
    <string name="guesses_left">Guesses left: </string>
    <string name="time">Time: </string>
    <string name="score">Score: </string>
    <string name="scores">Scores</string>

    <string name="game_over">Game Over!</string>
    <string name="game_win">You Win!</string>

    <string name="chronometer_initial_format">%s</string>

    <string name="gameModeName1">Single Random</string>
    <string name="gameModeName2">Single Random Hardcore</string>
    <string name="gameModeName3">Death Match</string>
    <string name="gameModeName4">Death Match Hardcore</string>
    <string name="gameModeExplanation1">You have 3 chances, each hero is randomed only once!</string>
    <string name="gameModeExplanation2">Hardcore mode, you have only 1 chance, each hero is randomed only once!</string>
    <string name="gameModeExplanation3">You have 3 chances, game never end!</string>
    <string name="gameModeExplanation4">Hardcore mode, you have only 1 chance, game never ends!</string>



    <string name="rateNow">Rate</string>
    <string name="rateLater">Remind me later</string>
    <string name="rateNever">No, thanks</string>

    <string name="rateTxt1">If you enjoy using</string>
    <string name="rateTxt2"> please take a moment to rate it.\nThanks for your support!</string>






    <!--<string name="title_activity_main">MainActivity</string>-->
    <!--<string name="dummy_button">Dummy Button</string>-->
    <!--<string name="dummy_content">DUMMY\nCONTENT</string>-->

    <!--<string name="hello_world">Hello world!</string>-->
    <!--<string name="drawer_open">Slider Menu Opened</string>-->
    <!--<string name="drawer_close">Slider Menu Closed</string>-->

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Hero quiz</item>
        <item >Skill quiz</item>
        <item >Scores</item>
        <item >2 players</item>
        <!--<item >What\'s Hot</item>-->
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <!--<item>@drawable/ic_sign</item>-->
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <!--<item>@drawable/ic_communities</item>-->
        <!--<item>@drawable/ic_pages</item>-->
        <!--<item>@drawable/ic_whats_hot</item>-->
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>






    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

</resources>
