<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <!--<Button-->
        <!--android:id="@+id/heroQuiz"-->
        <!--style="@style/btnStylesorbus"-->
        <!--android:layout_width="280dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_below="@id/logo"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:text="@string/hero_quiz" />-->

    <Button
        android:id="@+id/skillQuiz"
        style="@style/btnStylesorbus"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"
        android:layout_marginTop="10dp"
        android:text="@string/skill_quiz" />

    <Button
        android:id="@+id/heroQuiz"
        style="@style/btnStylesorbus"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/skillQuiz"
        android:layout_marginTop="10dp"
        android:text="@string/hero_quiz" />

    <Button
        android:id="@+id/scoreBoard"
        style="@style/btnStylesorbus"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/heroQuiz"
        android:layout_marginTop="10dp"
        android:text="@string/scores" />

</RelativeLayout>
