<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scroll">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="400px"
            android:layout_height="400px"
            android:layout_marginTop="140px"
            android:layout_centerHorizontal="true" />

        <TextView
                android:id="@+id/gameOverTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/logo"
                android:textSize="80px"
                android:textColor="@color/red"
                android:text="@string/game_win" />


        <LinearLayout
                android:id="@+id/statistics1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/gameOverTxt"
                android:layout_marginTop="5dp" >

                <TextView
                        android:id="@+id/scoreTxtRes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/points"
                        android:textSize="40px"
                        android:textColor="@color/black" />

                <TextView
                        android:id="@+id/scoreRes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/scoreTxtRes"
                        android:layout_marginLeft="5px"
                        android:textSize="60px"
                        android:textColor="@color/red" />

            </LinearLayout>

        <LinearLayout
                android:id="@+id/statistics2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/statistics1"
                android:layout_marginTop="10dp" >

                <TextView
                        android:id="@+id/timeTxtRes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="40px"
                        android:textColor="@color/black" />

                <TextView
                        android:id="@+id/timeRes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/timeTxtRes"
                        android:layout_marginLeft="5px"
                        android:textSize="60px"
                        android:textColor="@color/red" />

        </LinearLayout>


</RelativeLayout>